# ai4bharat1

./: .env.template  .gitignore  .pre-commit-config.yaml  ChromaDB_vs_Pinecone_Analysis.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.dev  Hackathon_Design.md  Hackathon_Design_Simple.md  Hackathon_Implementation_Plan.md  Hackathon_Scoring_Analysis.md  IVR_Service_Analysis.md  Implementation_Cost_Analysis.md  Makefile  RAG_Code_Flow_Diagram.md  RAG_Code_Reading_Steps.md  RAG_Implementation_Guide.md  README.md  Technology_Stack_Presentation.md  design.md  docker-compose.yml  pyproject.toml  requirements.txt  rough.py  test_server.py  validate_setup.py
.kiro/specs/agri-civic-intelligence-platform/: design.md  requirements.md  tasks.md
app/: __init__.py  config.py  database.py  main.py
app/api/: health.py  ivr.py  llm.py  rag.py  session.py  translation.py  vector_db.py
app/core/: logging.py  middleware.py
app/models/: __init__.py  base.py  market.py  notification.py  session.py  user.py
app/services/: database.py  document_ingestion.py  embedding_service.py  ivr_service.py  llm_service.py  pinecone_db.py  rag_engine.py  scheduler.py  session_manager.py  translation.py  vector_db.py  vector_db_factory.py  weaviate_db.py
docs/: llm_service.md
migrations/: env.py
migrations/versions/: 9eec2db0741e_initial_migration.py
scripts/: init-db.sql  init_db.py  init_vector_db.py  redis.conf  seed_db.py  setup-dev.bat  setup-dev.sh
tests/: conftest.py  test_config.py  test_ivr.py  test_main.py  test_vector_db.py
